# corsocpp_tp_2024

./: CMakeLists.txt  README.md
S0/: CMakeLists.txt
S1/: CMakeLists.txt  main.cpp  mymath.cpp  mymath.h  namespaces.cpp
S2/: CMakeLists.txt  arraybyref.cpp  passby.cpp  pointers.cpp  references.cpp  returnref.cpp  rvalueref.cpp  stackheap  stackheap.cpp  swapbyref.cpp
S3/: CMakeLists.txt  fraction.cpp  fraction.h  main.cpp
S4/: CMakeLists.txt  main.cpp
S5/: CMakeLists.txt  main.cpp
S6/: CMakeLists.txt  employee.cpp  employee.h  lecturer.cpp  lecturer.h  main.cpp  researcher.cpp  researcher.h
S7/: CMakeLists.txt  main.cpp
S8/: CMakeLists.txt  constcast.cpp  employee.cpp  employee.h  lecturer.cpp  lecturer.h  lecturerresearcher.cpp  lecturerresearcher.h  main.cpp  researcher.cpp  researcher.h
S9/: 8-D  CMakeLists.txt  data.cpp  data.h  friend.cpp  lambda.cpp  mylist.cpp  mylist.h  pimpl.cpp  template.cpp
